spec/golden/errors/internal_interpolation.tn
puts String.interpolation("left", "right")
